// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`linter .gql bad fixture matches snapshot 1`] = `
Object {
  "console": null,
  "failureMessage": "[4m/Users/emmenko/dev/src/jest-runner-graphql-schema-linter/src/fixtures/bad.gql[24m
[2m1:1[22m The object type \`Unused\` is missing a description.                [2m types-have-descriptions[22m 
[2m1:1[22m A \`PageInfo\` object type is required as per the Relay spec.       [2m relay-page-info-spec[22m    
[2m1:1[22m The type \`Unused\` is defined in the schema but not used anywhere. [2m defined-types-are-used[22m  
[2m1:1[22m The type \`Unused\` is defined in the schema but not used anywhere. [2m defined-types-are-used[22m  
[2m1:1[22m The object type \`Unused\` is missing a description.                [2m types-have-descriptions[22m 
[2m2:3[22m The field \`Unused.foo\` is missing a description.                  [2m fields-have-descriptions[22m
[2m2:3[22m The field \`Unused.foo\` is missing a description.                  [2m fields-have-descriptions[22m
[2m5:1[22m The object type \`Query\` is missing a description.                 [2m types-have-descriptions[22m 
[2m5:1[22m The object type \`Query\` is missing a description.                 [2m types-have-descriptions[22m 
[2m6:3[22m The field \`Query.version\` is missing a description.               [2m fields-have-descriptions[22m
[2m6:3[22m The field \`Query.version\` is missing a description.               [2m fields-have-descriptions[22m

[31m✖ 11 errors detected[39m
",
  "numFailingTests": 1,
  "numPassingTests": 0,
  "numPendingTests": 0,
  "skipped": undefined,
  "snapshot": Object {
    "added": 0,
    "fileDeleted": false,
    "matched": 0,
    "unchecked": 0,
    "unmatched": 0,
    "updated": 0,
  },
  "sourceMaps": Object {},
  "testExecError": null,
  "testResults": Array [
    Object {
      "ancestorTitles": Array [],
      "failureMessages": Array [
        "[4m/Users/emmenko/dev/src/jest-runner-graphql-schema-linter/src/fixtures/bad.gql[24m
[2m1:1[22m The object type \`Unused\` is missing a description.                [2m types-have-descriptions[22m 
[2m1:1[22m A \`PageInfo\` object type is required as per the Relay spec.       [2m relay-page-info-spec[22m    
[2m1:1[22m The type \`Unused\` is defined in the schema but not used anywhere. [2m defined-types-are-used[22m  
[2m1:1[22m The type \`Unused\` is defined in the schema but not used anywhere. [2m defined-types-are-used[22m  
[2m1:1[22m The object type \`Unused\` is missing a description.                [2m types-have-descriptions[22m 
[2m2:3[22m The field \`Unused.foo\` is missing a description.                  [2m fields-have-descriptions[22m
[2m2:3[22m The field \`Unused.foo\` is missing a description.                  [2m fields-have-descriptions[22m
[2m5:1[22m The object type \`Query\` is missing a description.                 [2m types-have-descriptions[22m 
[2m5:1[22m The object type \`Query\` is missing a description.                 [2m types-have-descriptions[22m 
[2m6:3[22m The field \`Query.version\` is missing a description.               [2m fields-have-descriptions[22m
[2m6:3[22m The field \`Query.version\` is missing a description.               [2m fields-have-descriptions[22m

[31m✖ 11 errors detected[39m
",
      ],
      "fullName": undefined,
      "numPassingAsserts": 1,
      "status": "failed",
      "title": "",
    },
  ],
}
`;

exports[`linter .gql good fixture matches snapshot 1`] = `
Object {
  "console": null,
  "failureMessage": undefined,
  "numFailingTests": 0,
  "numPassingTests": 1,
  "numPendingTests": 0,
  "skipped": undefined,
  "snapshot": Object {
    "added": 0,
    "fileDeleted": false,
    "matched": 0,
    "unchecked": 0,
    "unmatched": 0,
    "updated": 0,
  },
  "sourceMaps": Object {},
  "testExecError": null,
  "testResults": Array [
    Object {
      "ancestorTitles": Array [],
      "failureMessages": Array [
        undefined,
      ],
      "fullName": undefined,
      "numPassingAsserts": 0,
      "status": "passed",
      "title": "",
    },
  ],
}
`;

exports[`linter .graphql bad fixture matches snapshot 1`] = `
Object {
  "console": null,
  "failureMessage": "[4m/Users/emmenko/dev/src/jest-runner-graphql-schema-linter/src/fixtures/bad.graphql[24m
[2m1:1[22m The object type \`Unused\` is missing a description.                [2m types-have-descriptions[22m 
[2m1:1[22m A \`PageInfo\` object type is required as per the Relay spec.       [2m relay-page-info-spec[22m    
[2m1:1[22m The type \`Unused\` is defined in the schema but not used anywhere. [2m defined-types-are-used[22m  
[2m1:1[22m The type \`Unused\` is defined in the schema but not used anywhere. [2m defined-types-are-used[22m  
[2m1:1[22m The object type \`Unused\` is missing a description.                [2m types-have-descriptions[22m 
[2m2:3[22m The field \`Unused.foo\` is missing a description.                  [2m fields-have-descriptions[22m
[2m2:3[22m The field \`Unused.foo\` is missing a description.                  [2m fields-have-descriptions[22m
[2m5:1[22m The object type \`Query\` is missing a description.                 [2m types-have-descriptions[22m 
[2m5:1[22m The object type \`Query\` is missing a description.                 [2m types-have-descriptions[22m 
[2m6:3[22m The field \`Query.version\` is missing a description.               [2m fields-have-descriptions[22m
[2m6:3[22m The field \`Query.version\` is missing a description.               [2m fields-have-descriptions[22m

[31m✖ 11 errors detected[39m
",
  "numFailingTests": 1,
  "numPassingTests": 0,
  "numPendingTests": 0,
  "skipped": undefined,
  "snapshot": Object {
    "added": 0,
    "fileDeleted": false,
    "matched": 0,
    "unchecked": 0,
    "unmatched": 0,
    "updated": 0,
  },
  "sourceMaps": Object {},
  "testExecError": null,
  "testResults": Array [
    Object {
      "ancestorTitles": Array [],
      "failureMessages": Array [
        "[4m/Users/emmenko/dev/src/jest-runner-graphql-schema-linter/src/fixtures/bad.graphql[24m
[2m1:1[22m The object type \`Unused\` is missing a description.                [2m types-have-descriptions[22m 
[2m1:1[22m A \`PageInfo\` object type is required as per the Relay spec.       [2m relay-page-info-spec[22m    
[2m1:1[22m The type \`Unused\` is defined in the schema but not used anywhere. [2m defined-types-are-used[22m  
[2m1:1[22m The type \`Unused\` is defined in the schema but not used anywhere. [2m defined-types-are-used[22m  
[2m1:1[22m The object type \`Unused\` is missing a description.                [2m types-have-descriptions[22m 
[2m2:3[22m The field \`Unused.foo\` is missing a description.                  [2m fields-have-descriptions[22m
[2m2:3[22m The field \`Unused.foo\` is missing a description.                  [2m fields-have-descriptions[22m
[2m5:1[22m The object type \`Query\` is missing a description.                 [2m types-have-descriptions[22m 
[2m5:1[22m The object type \`Query\` is missing a description.                 [2m types-have-descriptions[22m 
[2m6:3[22m The field \`Query.version\` is missing a description.               [2m fields-have-descriptions[22m
[2m6:3[22m The field \`Query.version\` is missing a description.               [2m fields-have-descriptions[22m

[31m✖ 11 errors detected[39m
",
      ],
      "fullName": undefined,
      "numPassingAsserts": 1,
      "status": "failed",
      "title": "",
    },
  ],
}
`;

exports[`linter .graphql good fixture matches snapshot 1`] = `
Object {
  "console": null,
  "failureMessage": undefined,
  "numFailingTests": 0,
  "numPassingTests": 1,
  "numPendingTests": 0,
  "skipped": undefined,
  "snapshot": Object {
    "added": 0,
    "fileDeleted": false,
    "matched": 0,
    "unchecked": 0,
    "unmatched": 0,
    "updated": 0,
  },
  "sourceMaps": Object {},
  "testExecError": null,
  "testResults": Array [
    Object {
      "ancestorTitles": Array [],
      "failureMessages": Array [
        undefined,
      ],
      "fullName": undefined,
      "numPassingAsserts": 0,
      "status": "passed",
      "title": "",
    },
  ],
}
`;
